# jaeger-client-c

./: .buildinfo  .clang-format  .clang-tidy  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in  README.md  agent_8pb-c_8h_source.html  alloc_8h.html  alloc_8h.js  alloc_8h__dep__incl.map  alloc_8h__dep__incl.md5  alloc_8h__incl.map  alloc_8h__incl.md5  alloc_8h_source.html  annotated.html  annotated.js  annotated_dup.js  baggage_8h.html  baggage_8h.js  baggage_8h__incl.map  baggage_8h__incl.md5  baggage_8h_source.html  baggage_8pb-c_8h_source.html  classes.html  clock_8h.html  clock_8h.js  clock_8h__dep__incl.map  clock_8h__dep__incl.md5  clock_8h__incl.map  clock_8h__incl.md5  clock_8h_source.html  codecov.yml  common_8h.html  common_8h.js  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h__incl.map  (+617 more)
_sources/: index.rst.txt
cmake/: CheckAtomics.cmake  CheckAttributes.cmake  CheckBuiltin.cmake  CheckFormatAttribute.cmake  CodeCoverage.cmake  Config.cmake.in  FindJansson.cmake  FindProtobufC.cmake  Findhttp-parser.cmake  Findjansson.cmake  Findprotobuf-c.cmake  FormatAttribute.cmake  Fuzz.cmake  GenerateDocumentation.cmake  Sanitizers.cmake  atomics_test.c  builtin_test.c  format_attribute_test.c  fuzz_test.c  guarded_by_attribute_test.c  toolchain.cmake
cmake/Hunter/: config.cmake
cmake/protobuf_test_project/: CMakeLists.txt  optional_test.c  optional_test.proto
crossdock/: main.c  messages.h
doc/: Doxyfile.in  conf.py.in  index.rst.in
idl/: model.proto  openapiv2.proto  prototool.yaml  swagger_annotations.proto
scripts/: build.sh  clang-format.sh  clang-tidy.sh  install-deps.sh  llvm-gcov.sh  update-license.py  update-licenses.sh  upload-doc.sh  upload_coverage.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  defines_0.js  files_1.js  files_2.js  files_4.js  files_7.js  files_8.js  files_a.js  files_c.js  functions_0.js  search.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  (+15 more)
src/jaegertracingc/: alloc.c  alloc.h  alloc_test.c  alloc_test.h  baggage.c  baggage.h  clock.c  clock.h  clock_test.c  common.c  common.h  config.c  config.h.in  constants.c  constants.h.in  default_test_driver.c  duration.c  duration.h  duration_test.c  duration_test.h  endian.h  hashtable.c  hashtable.h  hashtable_test.c  init.c  init.h  init_test_driver.c  key_value.c  key_value.h  key_value_test.c  key_value_test.h  list.c  list.h  list_test.c  log_record.c  log_record.h  log_record_test.c  logger.c  logger.h  logging.c  (+75 more)
src/jaegertracingc/internal/: endian.h  random.h  strings.h  test_helpers.h
src/jaegertracingc/protoc-gen/: agent.pb-c.c  agent.pb-c.h  baggage.pb-c.h  jaeger.pb-c.h  sampling.pb-c.c  sampling.pb-c.h
